Bison/parser.output
Estado 94 conflictos: 2 desplazamiento/reducción
Estado 135 conflictos: 1 reducción/reducción
Estado 149 conflictos: 3 desplazamiento/reducción
Estado 152 conflictos: 3 desplazamiento/reducción
Estado 183 conflictos: 1 reducción/reducción
Estado 184 conflictos: 1 reducción/reducción


Gramática

    0 $accept: descAlgoritmo $end

    1 descAlgoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_PUNTOYCOMA cabeceraAlgoritmo bloqueAlgoritmo TK_FALGORITMO

    2 asignacion: operandoBooleano TK_DOSPUNTOS_IGUAL expresion
    3           | operandoAritmetico TK_DOSPUNTOS_IGUAL expresion

    4 alternativa: TK_SI expresion TK_FLECHA instrucciones listaOpciones TK_FSI

    5 listaOpciones: TK_CORCHETES expresion TK_FLECHA instrucciones listaOpciones
    6              | %empty

    7 iteracion: itCotaFija
    8          | itCotaVariable

    9 itCotaVariable: TK_MIENTRAS expresion TK_HACER instrucciones TK_FMIENTRAS

   10 itCotaFija: TK_PARA TK_IDENTIFICADOR TK_DOSPUNTOS_IGUAL expresion TK_HASTA expresion TK_HACER instrucciones TK_FPARA

   11 defAccion: TK_ACCION cabeceraAccion bloque TK_FACCION

   12 defFuncion: TK_FUNCION cabeceraFuncion bloque TK_DEV expresion TK_FFUNCION

   13 cabeceraAccion: TK_IDENTIFICADOR TK_PARENTESIS_APERTURA defParForm TK_PARENTESIS_CIERRE TK_PUNTOYCOMA

   14 cabeceraFuncion: TK_IDENTIFICADOR TK_PARENTESIS_APERTURA listaDefsVariables TK_PARENTESIS_CIERRE TK_DEV defTipo TK_PUNTOYCOMA

   15 defParForm: dParForm TK_PUNTOYCOMA defParForm
   16           | dParForm
   17           | %empty

   18 dParForm: TK_ENT listaId TK_DOSPUNTOS defTipo
   19         | TK_SAL listaId TK_DOSPUNTOS defTipo
   20         | TK_ENTSAL listaId TK_DOSPUNTOS defTipo

   21 llamadaAccion: TK_IDENTIFICADOR TK_PARENTESIS_APERTURA parametrosReales TK_PARENTESIS_CIERRE

   22 llamadaFuncion: TK_IDENTIFICADOR TK_DOSPUNTOS_IGUAL TK_PARENTESIS_APERTURA parametrosReales TK_PARENTESIS_CIERRE

   23 parametrosReales: expresion TK_COMA parametrosReales
   24                 | expresion
   25                 | %empty

   26 listaCampos: TK_IDENTIFICADOR TK_DOSPUNTOS defTipo TK_PUNTOYCOMA listaCampos
   27            | %empty

   28 listaDefsConstantes: TK_IDENTIFICADOR TK_ASIGNACION TK_PUNTOYCOMA listaDefsConstantes
   29                    | %empty

   30 listaDefsVariables: listaId TK_IDENTIFICADOR TK_COMA listaId
   31                   | TK_IDENTIFICADOR

   32 listaId: TK_IDENTIFICADOR TK_COMA listaId
   33        | TK_IDENTIFICADOR

   34 defVariablesInteraccion: defEntrada
   35                        | defEntrada defSalida
   36                        | defSalida

   37 defEntrada: TK_ENT listaDefsVariables

   38 defSalida: TK_SAL listaDefsVariables

   39 expresion: expArit
   40          | expBool
   41          | llamadaFuncion

   42 expArit: expArit TK_SUMA expArit
   43        | expArit TK_RESTA expArit
   44        | expArit TK_MULTIPLICACION expArit
   45        | expArit TK_DIVISION expArit
   46        | expArit TK_DIVISION_ENTERA expArit
   47        | expArit TK_MODULO expArit
   48        | TK_PARENTESIS_APERTURA expArit TK_PARENTESIS_CIERRE
   49        | operandoAritmetico
   50        | TK_RESTA expArit
   51        | TK_LITERAL_NUMERICO

   52 expBool: expBool TK_Y expBool
   53        | expBool TK_O expBool
   54        | TK_NO expBool
   55        | operandoBooleano
   56        | TK_VERDADERO
   57        | TK_FALSO
   58        | expresion TK_OPREL expresion
   59        | TK_PARENTESIS_APERTURA expBool TK_PARENTESIS_CIERRE

   60 operandoBooleano: TK_IDENTIFICADOR_BOOLEANO
   61                 | operandoBooleano TK_PUNTO operandoBooleano
   62                 | operandoBooleano TK_CORCHETE_APERTURA expresion TK_CORCHETE_CIERRE
   63                 | operandoBooleano TK_REF

   64 operandoAritmetico: TK_IDENTIFICADOR
   65                   | operandoAritmetico TK_PUNTO operandoAritmetico
   66                   | operandoAritmetico TK_CORCHETE_APERTURA expresion TK_CORCHETE_CIERRE
   67                   | operandoAritmetico TK_REF

   68 instrucciones: instruccion TK_PUNTOYCOMA instrucciones
   69              | instruccion

   70 instruccion: TK_CONTINUAR
   71            | asignacion
   72            | alternativa
   73            | iteracion
   74            | llamadaAccion

   75 cabeceraAlgoritmo: defGlobales defAccionesFunciones defVariablesInteraccion TK_COMENTARIO

   76 bloqueAlgoritmo: %empty
   77                | bloque TK_COMENTARIO

   78 defGlobales: definicionTipo defGlobales
   79            | definicionConst defGlobales
   80            | %empty

   81 defAccionesFunciones: defAccion defAccionesFunciones
   82                     | defFuncion defAccionesFunciones
   83                     | %empty

   84 bloque: declaraciones instrucciones

   85 declaraciones: definicionTipo declaraciones
   86              | definicionConst declaraciones
   87              | definicionVar declaraciones
   88              | %empty

   89 definicionTipo: TK_TIPO listaDefsTipo TK_FTIPO

   90 definicionConst: TK_CONST listaDefsConstantes TK_FCONST

   91 definicionVar: TK_VAR listaDefsVariables TK_FVAR

   92 listaDefsTipo: TK_IDENTIFICADOR TK_ASIGNACION defTipo TK_PUNTOYCOMA listaDefsTipo
   93              | %empty

   94 defTipo: TK_TUPLA listaCampos TK_FTUPLA
   95        | TK_TABLA TK_CORCHETE_APERTURA expresionT TK_PUNTO_Y_PUNTO expresionT TK_CORCHETE_CIERRE TK_DE defTipo
   96        | TK_IDENTIFICADOR
   97        | expresionT TK_PUNTO_Y_PUNTO expresionT
   98        | TK_REF defTipo
   99        | TK_TIPOBASE

  100 expresionT: TK_LITERALENTERO
  101           | TK_LITERALCARACTER


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    TK_PUNTOYCOMA (258) 1 13 14 15 26 28 68 92
    TK_CONTINUAR (259) 70
    TK_ALGORITMO (260) 1
    TK_IDENTIFICADOR_BOOLEANO (261) 60
    TK_IDENTIFICADOR (262) 1 10 13 14 21 22 26 28 30 31 32 33 64 92 96
    TK_FALGORITMO (263) 1
    TK_PARA (264) 10
    TK_COMA (265) 23 30 32
    TK_PARENTESIS_APERTURA (266) 13 14 21 22 48 59
    TK_PARENTESIS_CIERRE (267) 13 14 21 22 48 59
    TK_ENT (268) 18 37
    TK_DOSPUNTOS (269) 18 19 20 26
    TK_SAL (270) 19 38
    TK_ENTSAL (271) 20
    TK_DEV (272) 12 14
    TK_FUNCION (273) 12
    TK_FFUNCION (274) 12
    TK_ACCION (275) 11
    TK_FACCION (276) 11
    TK_DOSPUNTOS_IGUAL (277) 2 3 10 22
    TK_HASTA (278) 10
    TK_HACER (279) 9 10
    TK_FPARA (280) 10
    TK_MIENTRAS (281) 9
    TK_FMIENTRAS (282) 9
    TK_CORCHETES (283) 5
    TK_FLECHA (284) 4 5
    TK_SI (285) 4
    TK_FSI (286) 4
    TK_SUMA (287) 42
    TK_RESTA (288) 43 50
    TK_MULTIPLICACION (289) 44
    TK_DIVISION (290) 45
    TK_DIVISION_ENTERA (291) 46
    TK_MODULO (292) 47
    TK_LITERAL_NUMERICO (293) 51
    TK_Y (294) 52
    TK_O (295) 53
    TK_NO (296) 54
    TK_VERDADERO (297) 56
    TK_FALSO (298) 57
    TK_OPREL (299) 58
    TK_CORCHETE_APERTURA (300) 62 66 95
    TK_CORCHETE_CIERRE (301) 62 66 95
    TK_PUNTO (302) 61 65
    TK_COMENTARIO (303) 75 77
    TK_TIPO (304) 89
    TK_FTIPO (305) 89
    TK_CONST (306) 90
    TK_FCONST (307) 90
    TK_VAR (308) 91
    TK_FVAR (309) 91
    TK_TUPLA (310) 94
    TK_FTUPLA (311) 94
    TK_TABLA (312) 95
    TK_PUNTO_Y_PUNTO (313) 95 97
    TK_REF (314) 63 67 98
    TK_DE (315) 95
    TK_TIPOBASE (316) 99
    TK_LITERALENTERO (317) 100
    TK_LITERALCARACTER (318) 101
    TK_ASIGNACION (319) 28 92


No terminales con las reglas donde aparecen

    $accept (65)
        on left: 0
    descAlgoritmo (66)
        on left: 1
        on right: 0
    asignacion (67)
        on left: 2 3
        on right: 71
    alternativa (68)
        on left: 4
        on right: 72
    listaOpciones (69)
        on left: 5 6
        on right: 4 5
    iteracion (70)
        on left: 7 8
        on right: 73
    itCotaVariable (71)
        on left: 9
        on right: 8
    itCotaFija (72)
        on left: 10
        on right: 7
    defAccion (73)
        on left: 11
        on right: 81
    defFuncion (74)
        on left: 12
        on right: 82
    cabeceraAccion (75)
        on left: 13
        on right: 11
    cabeceraFuncion (76)
        on left: 14
        on right: 12
    defParForm (77)
        on left: 15 16 17
        on right: 13 15
    dParForm (78)
        on left: 18 19 20
        on right: 15 16
    llamadaAccion (79)
        on left: 21
        on right: 74
    llamadaFuncion (80)
        on left: 22
        on right: 41
    parametrosReales (81)
        on left: 23 24 25
        on right: 21 22 23
    listaCampos (82)
        on left: 26 27
        on right: 26 94
    listaDefsConstantes (83)
        on left: 28 29
        on right: 28 90
    listaDefsVariables (84)
        on left: 30 31
        on right: 14 37 38 91
    listaId (85)
        on left: 32 33
        on right: 18 19 20 30 32
    defVariablesInteraccion (86)
        on left: 34 35 36
        on right: 75
    defEntrada (87)
        on left: 37
        on right: 34 35
    defSalida (88)
        on left: 38
        on right: 35 36
    expresion (89)
        on left: 39 40 41
        on right: 2 3 4 5 9 10 12 23 24 58 62 66
    expArit (90)
        on left: 42 43 44 45 46 47 48 49 50 51
        on right: 39 42 43 44 45 46 47 48 50
    expBool (91)
        on left: 52 53 54 55 56 57 58 59
        on right: 40 52 53 54 59
    operandoBooleano (92)
        on left: 60 61 62 63
        on right: 2 55 61 62 63
    operandoAritmetico (93)
        on left: 64 65 66 67
        on right: 3 49 65 66 67
    instrucciones (94)
        on left: 68 69
        on right: 4 5 9 10 68 84
    instruccion (95)
        on left: 70 71 72 73 74
        on right: 68 69
    cabeceraAlgoritmo (96)
        on left: 75
        on right: 1
    bloqueAlgoritmo (97)
        on left: 76 77
        on right: 1
    defGlobales (98)
        on left: 78 79 80
        on right: 75 78 79
    defAccionesFunciones (99)
        on left: 81 82 83
        on right: 75 81 82
    bloque (100)
        on left: 84
        on right: 11 12 77
    declaraciones (101)
        on left: 85 86 87 88
        on right: 84 85 86 87
    definicionTipo (102)
        on left: 89
        on right: 78 85
    definicionConst (103)
        on left: 90
        on right: 79 86
    definicionVar (104)
        on left: 91
        on right: 87
    listaDefsTipo (105)
        on left: 92 93
        on right: 89 92
    defTipo (106)
        on left: 94 95 96 97 98 99
        on right: 14 18 19 20 26 92 95 98
    expresionT (107)
        on left: 100 101
        on right: 95 97


Estado 0

    0 $accept: . descAlgoritmo $end

    TK_ALGORITMO  desplazar e ir al estado 1

    descAlgoritmo  ir al estado 2


Estado 1

    1 descAlgoritmo: TK_ALGORITMO . TK_IDENTIFICADOR TK_PUNTOYCOMA cabeceraAlgoritmo bloqueAlgoritmo TK_FALGORITMO

    TK_IDENTIFICADOR  desplazar e ir al estado 3


Estado 2

    0 $accept: descAlgoritmo . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 descAlgoritmo: TK_ALGORITMO TK_IDENTIFICADOR . TK_PUNTOYCOMA cabeceraAlgoritmo bloqueAlgoritmo TK_FALGORITMO

    TK_PUNTOYCOMA  desplazar e ir al estado 5


Estado 4

    0 $accept: descAlgoritmo $end .

    $default  aceptar


Estado 5

    1 descAlgoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_PUNTOYCOMA . cabeceraAlgoritmo bloqueAlgoritmo TK_FALGORITMO

    TK_TIPO   desplazar e ir al estado 6
    TK_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 80 (defGlobales)

    cabeceraAlgoritmo  ir al estado 8
    defGlobales        ir al estado 9
    definicionTipo     ir al estado 10
    definicionConst    ir al estado 11


Estado 6

   89 definicionTipo: TK_TIPO . listaDefsTipo TK_FTIPO

    TK_IDENTIFICADOR  desplazar e ir al estado 12

    $default  reduce usando la regla 93 (listaDefsTipo)

    listaDefsTipo  ir al estado 13


Estado 7

   90 definicionConst: TK_CONST . listaDefsConstantes TK_FCONST

    TK_IDENTIFICADOR  desplazar e ir al estado 14

    $default  reduce usando la regla 29 (listaDefsConstantes)

    listaDefsConstantes  ir al estado 15


Estado 8

    1 descAlgoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_PUNTOYCOMA cabeceraAlgoritmo . bloqueAlgoritmo TK_FALGORITMO

    TK_TIPO   desplazar e ir al estado 6
    TK_CONST  desplazar e ir al estado 7
    TK_VAR    desplazar e ir al estado 16

    TK_FALGORITMO  reduce usando la regla 76 (bloqueAlgoritmo)
    $default       reduce usando la regla 88 (declaraciones)

    bloqueAlgoritmo  ir al estado 17
    bloque           ir al estado 18
    declaraciones    ir al estado 19
    definicionTipo   ir al estado 20
    definicionConst  ir al estado 21
    definicionVar    ir al estado 22


Estado 9

   75 cabeceraAlgoritmo: defGlobales . defAccionesFunciones defVariablesInteraccion TK_COMENTARIO

    TK_FUNCION  desplazar e ir al estado 23
    TK_ACCION   desplazar e ir al estado 24

    $default  reduce usando la regla 83 (defAccionesFunciones)

    defAccion             ir al estado 25
    defFuncion            ir al estado 26
    defAccionesFunciones  ir al estado 27


Estado 10

   78 defGlobales: definicionTipo . defGlobales

    TK_TIPO   desplazar e ir al estado 6
    TK_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 80 (defGlobales)

    defGlobales      ir al estado 28
    definicionTipo   ir al estado 10
    definicionConst  ir al estado 11


Estado 11

   79 defGlobales: definicionConst . defGlobales

    TK_TIPO   desplazar e ir al estado 6
    TK_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 80 (defGlobales)

    defGlobales      ir al estado 29
    definicionTipo   ir al estado 10
    definicionConst  ir al estado 11


Estado 12

   92 listaDefsTipo: TK_IDENTIFICADOR . TK_ASIGNACION defTipo TK_PUNTOYCOMA listaDefsTipo

    TK_ASIGNACION  desplazar e ir al estado 30


Estado 13

   89 definicionTipo: TK_TIPO listaDefsTipo . TK_FTIPO

    TK_FTIPO  desplazar e ir al estado 31


Estado 14

   28 listaDefsConstantes: TK_IDENTIFICADOR . TK_ASIGNACION TK_PUNTOYCOMA listaDefsConstantes

    TK_ASIGNACION  desplazar e ir al estado 32


Estado 15

   90 definicionConst: TK_CONST listaDefsConstantes . TK_FCONST

    TK_FCONST  desplazar e ir al estado 33


Estado 16

   91 definicionVar: TK_VAR . listaDefsVariables TK_FVAR

    TK_IDENTIFICADOR  desplazar e ir al estado 34

    listaDefsVariables  ir al estado 35
    listaId             ir al estado 36


Estado 17

    1 descAlgoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_PUNTOYCOMA cabeceraAlgoritmo bloqueAlgoritmo . TK_FALGORITMO

    TK_FALGORITMO  desplazar e ir al estado 37


Estado 18

   77 bloqueAlgoritmo: bloque . TK_COMENTARIO

    TK_COMENTARIO  desplazar e ir al estado 38


Estado 19

   84 bloque: declaraciones . instrucciones

    TK_CONTINUAR               desplazar e ir al estado 39
    TK_IDENTIFICADOR_BOOLEANO  desplazar e ir al estado 40
    TK_IDENTIFICADOR           desplazar e ir al estado 41
    TK_PARA                    desplazar e ir al estado 42
    TK_MIENTRAS                desplazar e ir al estado 43
    TK_SI                      desplazar e ir al estado 44

    asignacion          ir al estado 45
    alternativa         ir al estado 46
    iteracion           ir al estado 47
    itCotaVariable      ir al estado 48
    itCotaFija          ir al estado 49
    llamadaAccion       ir al estado 50
    operandoBooleano    ir al estado 51
    operandoAritmetico  ir al estado 52
    instrucciones       ir al estado 53
    instruccion         ir al estado 54


Estado 20

   85 declaraciones: definicionTipo . declaraciones

    TK_TIPO   desplazar e ir al estado 6
    TK_CONST  desplazar e ir al estado 7
    TK_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 88 (declaraciones)

    declaraciones    ir al estado 55
    definicionTipo   ir al estado 20
    definicionConst  ir al estado 21
    definicionVar    ir al estado 22


Estado 21

   86 declaraciones: definicionConst . declaraciones

    TK_TIPO   desplazar e ir al estado 6
    TK_CONST  desplazar e ir al estado 7
    TK_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 88 (declaraciones)

    declaraciones    ir al estado 56
    definicionTipo   ir al estado 20
    definicionConst  ir al estado 21
    definicionVar    ir al estado 22


Estado 22

   87 declaraciones: definicionVar . declaraciones

    TK_TIPO   desplazar e ir al estado 6
    TK_CONST  desplazar e ir al estado 7
    TK_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 88 (declaraciones)

    declaraciones    ir al estado 57
    definicionTipo   ir al estado 20
    definicionConst  ir al estado 21
    definicionVar    ir al estado 22


Estado 23

   12 defFuncion: TK_FUNCION . cabeceraFuncion bloque TK_DEV expresion TK_FFUNCION

    TK_IDENTIFICADOR  desplazar e ir al estado 58

    cabeceraFuncion  ir al estado 59


Estado 24

   11 defAccion: TK_ACCION . cabeceraAccion bloque TK_FACCION

    TK_IDENTIFICADOR  desplazar e ir al estado 60

    cabeceraAccion  ir al estado 61


Estado 25

   81 defAccionesFunciones: defAccion . defAccionesFunciones

    TK_FUNCION  desplazar e ir al estado 23
    TK_ACCION   desplazar e ir al estado 24

    $default  reduce usando la regla 83 (defAccionesFunciones)

    defAccion             ir al estado 25
    defFuncion            ir al estado 26
    defAccionesFunciones  ir al estado 62


Estado 26

   82 defAccionesFunciones: defFuncion . defAccionesFunciones

    TK_FUNCION  desplazar e ir al estado 23
    TK_ACCION   desplazar e ir al estado 24

    $default  reduce usando la regla 83 (defAccionesFunciones)

    defAccion             ir al estado 25
    defFuncion            ir al estado 26
    defAccionesFunciones  ir al estado 63


Estado 27

   75 cabeceraAlgoritmo: defGlobales defAccionesFunciones . defVariablesInteraccion TK_COMENTARIO

    TK_ENT  desplazar e ir al estado 64
    TK_SAL  desplazar e ir al estado 65

    defVariablesInteraccion  ir al estado 66
    defEntrada               ir al estado 67
    defSalida                ir al estado 68


Estado 28

   78 defGlobales: definicionTipo defGlobales .

    $default  reduce usando la regla 78 (defGlobales)


Estado 29

   79 defGlobales: definicionConst defGlobales .

    $default  reduce usando la regla 79 (defGlobales)


Estado 30

   92 listaDefsTipo: TK_IDENTIFICADOR TK_ASIGNACION . defTipo TK_PUNTOYCOMA listaDefsTipo

    TK_IDENTIFICADOR    desplazar e ir al estado 69
    TK_TUPLA            desplazar e ir al estado 70
    TK_TABLA            desplazar e ir al estado 71
    TK_REF              desplazar e ir al estado 72
    TK_TIPOBASE         desplazar e ir al estado 73
    TK_LITERALENTERO    desplazar e ir al estado 74
    TK_LITERALCARACTER  desplazar e ir al estado 75

    defTipo     ir al estado 76
    expresionT  ir al estado 77


Estado 31

   89 definicionTipo: TK_TIPO listaDefsTipo TK_FTIPO .

    $default  reduce usando la regla 89 (definicionTipo)


Estado 32

   28 listaDefsConstantes: TK_IDENTIFICADOR TK_ASIGNACION . TK_PUNTOYCOMA listaDefsConstantes

    TK_PUNTOYCOMA  desplazar e ir al estado 78


Estado 33

   90 definicionConst: TK_CONST listaDefsConstantes TK_FCONST .

    $default  reduce usando la regla 90 (definicionConst)


Estado 34

   31 listaDefsVariables: TK_IDENTIFICADOR .
   32 listaId: TK_IDENTIFICADOR . TK_COMA listaId
   33        | TK_IDENTIFICADOR .

    TK_COMA  desplazar e ir al estado 79

    TK_IDENTIFICADOR  reduce usando la regla 33 (listaId)
    $default          reduce usando la regla 31 (listaDefsVariables)


Estado 35

   91 definicionVar: TK_VAR listaDefsVariables . TK_FVAR

    TK_FVAR  desplazar e ir al estado 80


Estado 36

   30 listaDefsVariables: listaId . TK_IDENTIFICADOR TK_COMA listaId

    TK_IDENTIFICADOR  desplazar e ir al estado 81


Estado 37

    1 descAlgoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_PUNTOYCOMA cabeceraAlgoritmo bloqueAlgoritmo TK_FALGORITMO .

    $default  reduce usando la regla 1 (descAlgoritmo)


Estado 38

   77 bloqueAlgoritmo: bloque TK_COMENTARIO .

    $default  reduce usando la regla 77 (bloqueAlgoritmo)


Estado 39

   70 instruccion: TK_CONTINUAR .

    $default  reduce usando la regla 70 (instruccion)


Estado 40

   60 operandoBooleano: TK_IDENTIFICADOR_BOOLEANO .

    $default  reduce usando la regla 60 (operandoBooleano)


Estado 41

   21 llamadaAccion: TK_IDENTIFICADOR . TK_PARENTESIS_APERTURA parametrosReales TK_PARENTESIS_CIERRE
   64 operandoAritmetico: TK_IDENTIFICADOR .

    TK_PARENTESIS_APERTURA  desplazar e ir al estado 82

    $default  reduce usando la regla 64 (operandoAritmetico)


Estado 42

   10 itCotaFija: TK_PARA . TK_IDENTIFICADOR TK_DOSPUNTOS_IGUAL expresion TK_HASTA expresion TK_HACER instrucciones TK_FPARA

    TK_IDENTIFICADOR  desplazar e ir al estado 83


Estado 43

    9 itCotaVariable: TK_MIENTRAS . expresion TK_HACER instrucciones TK_FMIENTRAS

    TK_IDENTIFICADOR_BOOLEANO  desplazar e ir al estado 40
    TK_IDENTIFICADOR           desplazar e ir al estado 84
    TK_PARENTESIS_APERTURA     desplazar e ir al estado 85
    TK_RESTA                   desplazar e ir al estado 86
    TK_LITERAL_NUMERICO        desplazar e ir al estado 87
    TK_NO                      desplazar e ir al estado 88
    TK_VERDADERO               desplazar e ir al estado 89
    TK_FALSO                   desplazar e ir al estado 90

    llamadaFuncion      ir al estado 91
    expresion           ir al estado 92
    expArit             ir al estado 93
    expBool             ir al estado 94
    operandoBooleano    ir al estado 95
    operandoAritmetico  ir al estado 96


Estado 44

    4 alternativa: TK_SI . expresion TK_FLECHA instrucciones listaOpciones TK_FSI

    TK_IDENTIFICADOR_BOOLEANO  desplazar e ir al estado 40
    TK_IDENTIFICADOR           desplazar e ir al estado 84
    TK_PARENTESIS_APERTURA     desplazar e ir al estado 85
    TK_RESTA                   desplazar e ir al estado 86
    TK_LITERAL_NUMERICO        desplazar e ir al estado 87
    TK_NO                      desplazar e ir al estado 88
    TK_VERDADERO               desplazar e ir al estado 89
    TK_FALSO                   desplazar e ir al estado 90
